need to stop the spans from wrapping the text

--- a/client/src/components/ControlBar/ControlBar.css
+++ b/client/src/components/ControlBar/ControlBar.css
@@ -113,3 +113,9 @@
 span + span {
   margin-left: 10px; /* adds space to the left of all but the first span */
 }
+span {
+    white-space: nowrap;
+    display: inline-block;
+    width: 100%;
+    view-transition-name: shrink-text;
+  }
